Pending changes in the mainline
===============================

General
-------

* Support for labels associated with patients, studies, series, and instances

REST API
--------

* API version upgraded to 20
* New URIs "/.../{id}/labels/{label}" to test/set/remove labels
* The "/patients/{id}", "/studies/{id}", "/series/{id}" and "/instances/{id}"
  contain the "Labels" field
* "/system": added "UserMetadata"

Plugins
-------

* Added "OrthancPluginRegisterDatabaseBackendV4()" to communicate using Google
  Protocol Buffers between the Orthanc core and database plugins

Maintenance
-----------

* Enforce the existence of the patient/study/instance while creating its archive
* Security: New configuration option "RestApiWriteToFileSystemEnabled"
  to allow "/instances/../export" (the latter is now disabled by default)
* Fix issue 214: VOILUTSequence is not returned in Wado-RS
* Fix /tools/reset crashing when ExtraMainDicomTags were defined
* Fix Housekeeper plugin infinite loop if Orthanc is empty.
* Fix a crash in /tools/reconstruct triggered by the Housekeeper plugin 
  when only changing the StorageCompression.


Version 1.11.3 (2023-02-03)
===========================

General
-------

* C-Store SCU now gives priority to the preferred TransferSyntax
  proposed by the receiving SCP instead of Orthanc own
  AcceptedTransferSyntaxes.
* Made the default SQLite DB more robust wrt future updates like
  adding new columns in DB.
* Made the HTTP Client errors more verbose by including the URL in the logs.
* Optimization: now using multiple threads to transcode files for
  asynchronous download of studies archive.
* New configuration "KeepAliveTimeout" with a default value of 1 second.
* ResourceModification jobs (/modify + /anonymize) can now use multiple threads to speed up processing
  - New configuration "JobsEngineThreadsCount.ResourceModification" to configure the number of threads.
* For systems using glibc > 2.8 (most of Linux systems except LSB